--- a/Genos.html
+++ b/Genos.html
@@ -399,8 +399,8 @@
         // GitHub API integration to check for updates
         async function checkGitHubUpdates() {
             // Replace with your GitHub username and repository name
-            const username = 'YOUR_GITHUB_USERNAME';  // ← CHANGE THIS
-            const repo = 'YOUR_REPO_NAME';           // ← CHANGE THIS
+            const username = 'XenosCode';  // ← CHANGE THIS
+            const repo = 'GenosBotStatus';           // ← CHANGE THIS
             
             try {
                 const response = await fetch(`https://api.github.com/repos/${username}/${repo}/commits?per_page=5`);
