--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <div class="container">
         <header>
             <div class="profile-container">
-                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3J5d3l4bG5pN2J2cXJ4b3J6c2Z4cG9yZ2Y0a2F1b2V2bGZ1eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l0HlG8gUi3yJIMJ7a/giphy.gif" alt="Genos Profile" class="profile-pic">
+                <img src="https://cdn.discordapp.com/avatars/1282229251726114856/a_969e0dd68a7438c112c40ae92dab1b4b.gif?size=1024" alt="Genos Profile" class="profile-pic">
                 <h1 class="logo">GENOS BOT STATUS</h1>
             </div>
         </header>
