--- a/index.html
+++ b/index.html
@@ -456,29 +456,29 @@
         // Bot Status Configuration
         const botConfig = {
             status: "online", // Options: "online", "offline", "maintenance"
-            statusText: "All systems operational",
+            statusText: "All Systems Up To Date & Live.",
             uptime: "99.8%",
-            uptimeText: "Last 30 days",
-            lastUpdated: "January 2024"
+            uptimeText: "Last 7 days",
+            lastUpdated: "November 2025"
         };
         
         // Changelog Configuration - Add your updates here
         const changelogData = [
             {
-                date: "January 15, 2024",
-                message: "Added new moderation commands and improved performance"
+                date: "November 15, 2025",
+                message: "Added 5 New Commands, And 📚 Libraries Are Good, No Changes Needed."
             },
             {
-                date: "December 20, 2023",
-                message: "Fixed bug with music playback and added playlist support"
+                date: "November 14, 2025",
+                message: "Added 4 New Commands, Fully Customizable, And Fixed Lots Of Bugs."
             },
             {
-                date: "November 5, 2023",
-                message: "Introduced new economy system with leaderboards"
+                date: "November 12, 2025",
+                message: "Fixed Uptime Command From Not Showing, And On_Ready Has Also Been Foxed."
             },
             {
-                date: "October 12, 2023",
-                message: "Initial release with basic moderation and utility commands"
+                date: "November 7, 2025",
+                message: "Added 4 New Commands, Removed All Hard-Coded IDs, And Genos Can Npw Be Used In Any Server."
             }
         ];
         
