--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <header>
             <div class="profile-container">
                 <img src="https://cdn.discordapp.com/avatars/1282229251726114856/a_969e0dd68a7438c112c40ae92dab1b4b.gif?size=1024" alt="Genos Profile" class="profile-pic">
-                <h1 class="logo">Genos Bot Status</h1>
+                <h1 class="logo">Genos Bot</h1>
             </div>
         </header>
         
@@ -459,7 +459,7 @@
         
         <footer>
             <p>Genos Bot Status Dashboard • Last refreshed: <span id="refresh-time">Just now</span></p>
-            <div class="credit">Made By Project Jade.</div>
+            <div class="credit">Made By Jade.</div>
             <div class="copyright">© 2025 Jade. All rights reserved.</div>
         </footer>
     </div>
@@ -472,7 +472,7 @@
         // Bot Status Configuration
         const botConfig = {
             status: "online", // Options: "online", "offline", "maintenance"
-            statusText: "All Systems Operational - 48 Slash Commands Live!",
+            statusText: "All Systems Operational - Updates Are Live!",
             uptime: "100%",
             uptimeText: "Since Last Restart - November 24, 2025",
             lastUpdated: "November 24, 2025"
