--- a/index.html
+++ b/index.html
@@ -533,18 +533,11 @@
     <div class="container">
         <header>
             <div class="profile-container">
-                <img src="https://cdn.discordapp.com/avatars/1282229251726114856/a_8a31cab39d6986cca0aecd5e2b5451e7.gif?size=1024" alt="Genos Profile" class="profile-pic">
+                <img src="https://cdn.discordapp.com/attachments/1439069035504599101/1443803585522438288/Genos3.gif?ex=692a665f&is=692914df&hm=b3e3bbd7ced529d530f919449bc6c51184ccee6d42437f540695695b8862be17gif?size=1024" alt="Genos Profile" class="profile-pic">
                 <div class="logo-container">
                     <h1 class="logo">Genos</h1>
                     <p class="subtitle">A Multi-Purpose Discord Application</p>
                 </div>
-            </div>
-            
-            <!-- Three decorative lines -->
-            <div class="nav-lines">
-                <div class="nav-line"></div>
-                <div class="nav-line"></div>
-                <div class="nav-line"></div>
             </div>
             
             <!-- Navigation buttons -->
