--- a/index.html
+++ b/index.html
@@ -539,9 +539,7 @@
     <div class="container">
         <header>
             <div class="profile-container">
-                <a href="https://discord.com/oauth2/authorize?client_id=1282229251726114856&permissions=8&integration_type=0&scope=bot" target="_blank">
-                    <img src="uploaded:Genos3.gif" alt="Genos Profile" class="profile-pic">
-                </a>
+                <img src="uploaded:Genos3.gif" alt="Genos Profile" class="profile-pic">
                 <div class="logo-container">
                     <h1 class="logo">Genos</h1>
                     <p class="subtitle">A Multi-Purpose Discord Application</p>
@@ -656,47 +654,39 @@
 
         // Changelog Configuration - Add your updates here
         const changelogData = [
-            // UPDATED: Date changed from 24th to 27th
+            // UPDATED: Date changed from 24th to 27th for the following 9 entries
             {
                 date: "November 27, 2025",
                 message: "🐛 CRITICAL BUG FIX: Fixed syntax error in the anti-link system within the on_message event handler. Added missing parentheses around the URL detection condition that was causing a runtime error."
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "🔄 PERSISTENT VIEW SYSTEM ENHANCEMENT: Improved persistent view registration in the on_ready() event to ensure ticket system components survive bot restarts"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "🔧 TICKET SYSTEM RECOVERY: Added ticket channel recovery to reattach control views to existing ticket channels after bot restart"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "⚙️ VIEW INITIALIZATION: Enhanced view initialization with proper timeout settings for long-lived components"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "🛡️ ERROR HANDLING IMPROVEMENTS: Strengthened exception handling around database operations and view registration"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "📊 COMPREHENSIVE LOGGING: Added comprehensive logging for startup processes and error states"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "🔧 PERFORMANCE OPTIMIZATION: Reduced command response time by 40% through code optimization"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "🛠️ BUG FIXES: Resolved issue with ticket system permissions and slash command registration"
             },
-            // UPDATED: Date changed from 24th to 27th
             {
                 date: "November 27, 2025",
                 message: "📊 ANALYTICS: Added detailed command usage tracking and performance monitoring"
