--- a/index.html
+++ b/index.html
@@ -104,29 +104,9 @@
             animation: fadeInUp 1s ease-out 0.6s forwards;
         }
 
+        /* Stats container hidden */
         .stats-container {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin: 20px 0;
-            opacity: 0;
-            animation: fadeInUp 1s ease-out 0.7s forwards;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-value {
-            font-size: 24px;
-            font-weight: 700;
-            color: #ffffff;
-        }
-
-        .stat-label {
-            font-size: 14px;
-            color: #bbb;
-            margin-top: 5px;
+            display: none;
         }
 
         .nav-buttons {
@@ -733,19 +713,9 @@
                 </div>
             </div>
 
-            <div class="stats-container">
-                <div class="stat-item">
-                    <div class="stat-value" id="server-count">1,250+</div>
-                    <div class="stat-label">Servers</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-value" id="user-count">50,000+</div>
-                    <div class="stat-label">Users</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-value" id="command-count">60+</div>
-                    <div class="stat-label">Commands</div>
-                </div>
+            <!-- Stats container removed completely -->
+            <div class="stats-container" style="display: none;">
+                <!-- Statistics have been removed -->
             </div>
 
             <div class="nav-buttons">
@@ -826,19 +796,12 @@
                     </div>
                     <div class="feature-card" style="animation-delay: 0.4s">
                         <div class="feature-icon">
-                            <i class="fas fa-gamepad"></i>
-                        </div>
-                        <h3 class="feature-title">Fun & Games</h3>
-                        <p class="feature-desc">Engage your community with games, economy system, and interactive commands.</p>
-                    </div>
-                    <div class="feature-card" style="animation-delay: 0.5s">
-                        <div class="feature-icon">
                             <i class="fas fa-cogs"></i>
                         </div>
                         <h3 class="feature-title">Customization</h3>
                         <p class="feature-desc">Fully customizable prefixes, welcome messages, and server-specific settings.</p>
                     </div>
-                    <div class="feature-card" style="animation-delay: 0.6s">
+                    <div class="feature-card" style="animation-delay: 0.5s">
                         <div class="feature-icon">
                             <i class="fas fa-bolt"></i>
                         </div>
@@ -948,13 +911,11 @@
                     <br>
                     <p><strong>Key Features:</strong></p>
                     <ul style="text-align: left; margin: 15px 0; padding-left: 20px;">
-                        <li>60+ Slash & Prefix Commands</li>
                         <li>Advanced Moderation Tools</li>
                         <li>Customizable Ticket System</li>
                         <li>Welcome & Goodbye Messages</li>
                         <li>Server Analytics & Logging</li>
                         <li>Role Management & Auto-Roles</li>
-                        <li>Fun Commands & Games</li>
                         <li>And much more!</li>
                     </ul>
                     <p>All features are completely free to use with no limitations. Genos is constantly updated with new features and improvements based on community feedback.</p>
