--- a/index.html
+++ b/index.html
@@ -941,53 +941,57 @@
         // Bot Status Configuration
         const botConfig = {
             status: "online", // Options: "online", "offline", "maintenance"
-            statusText: "All Systems Operational - Updates Are Live!",
+            statusText: "All Systems Operational - Pushed All Updates.",
             uptime: "100%",
-            uptimeText: "Since Last Restart - November 27, 2025",
-            lastUpdated: "November 27, 2025"
+            uptimeText: "Since Last Restart - November 29, 2025",
+            lastUpdated: "November 29, 2025"
         };
 
         // Changelog Configuration - Add your updates here
         const changelogData = [
+            }, 
+            {
+                date: "November 29, 2025",
+                message: "📝 Command Name Changes: Mostly updated ticket commands, And other commands had a little bit of changes."
             {
                 date: "November 27, 2025",
-                message: "🐛 CRITICAL BUG FIX: Fixed syntax error in the anti-link system within the on_message event handler. Added missing parentheses around the URL detection condition that was causing a runtime error."
+                message: "🐛 Fixed Bugs: Fixed syntax error in the anti-link system within the on_message event handler. Added missing parentheses around the URL detection condition that was causing a runtime error."
             },
             {
                 date: "November 27, 2025",
-                message: "🔄 PERSISTENT VIEW SYSTEM ENHANCEMENT: Improved persistent view registration in the on_ready() event to ensure ticket system components survive bot restarts"
+                message: "🔄 Enhanced Persistent View: Improved persistent view registration in the on_ready() event to ensure ticket system components survive bot restarts"
             },
             {
                 date: "November 27, 2025",
-                message: "🔧 TICKET SYSTEM RECOVERY: Added ticket channel recovery to reattach control views to existing ticket channels after bot restart"
+                message: "🔧 Ticket System Recovery: Added ticket channel recovery to reattach control views to existing ticket channels after bot restart"
             },
             {
                 date: "November 27, 2025",
-                message: "⚙️ VIEW INITIALIZATION: Enhanced view initialization with proper timeout settings for long-lived components"
+                message: "⚙️ View Initialalization: Enhanced view initialization with proper timeout settings for long-lived components"
             },
             {
                 date: "November 27, 2025",
-                message: "🛡️ ERROR HANDLING IMPROVEMENTS: Strengthened exception handling around database operations and view registration"
+                message: "🛡️ Error Handling: Strengthened exception handling around database operations and view registration"
             },
             {
                 date: "November 27, 2025",
-                message: "📊 COMPREHENSIVE LOGGING: Added comprehensive logging for startup processes and error states"
+                message: "📊 Better Logging: Added comprehensive logging for startup processes and error states"
             },
             {
                 date: "November 27, 2025",
-                message: "🔧 PERFORMANCE OPTIMIZATION: Reduced command response time by 40% through code optimization"
+                message: "🔧 Performance Optimization: Reduced command response time by 40% through code optimization"
             },
             {
                 date: "November 27, 2025",
-                message: "🛠️ BUG FIXES: Resolved issue with ticket system permissions and slash command registration"
+                message: "🛠️ Bug Fixes: Resolved issue with ticket system permissions and slash command registration"
             },
             {
                 date: "November 27, 2025",
-                message: "📊 ANALYTICS: Added detailed command usage tracking and performance monitoring"
+                message: "📊  Stats: Added detailed command usage tracking and performance monitoring"
             },
             {
                 date: "November 23, 2025",
-                message: "🚀 MAJOR UPDATE: Added 48 SLASH COMMANDS - All commands now available as both prefix (!) and slash (/) commands"
+                message: "🚀 Slash Command Updates: Added 48 SLASH COMMANDS - All commands now available as both prefix (!) and slash (/) commands"
             },
             {
                 date: "November 23, 2025",
