--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                         <div class="card-value" id="uptime">100%</div>
                         <div class="status-indicator">
                             <div class="status-dot online"></div>
-                            <span id="uptime-text">Since Last Restart - November 27, 2025</span>
+                            <span id="uptime-text">Since Last Restart - November 29, 2025</span>
                         </div>
                     </div>
                 </div>
@@ -854,7 +854,7 @@
                     <span id="update-status-text">System Updated</span>
                 </div>
                 <p class="update-details" id="update-details">
-                    Last updated: November 27, 2025
+                    Last updated: November 29, 2025
                 </p>
 
                 <div class="changelog" id="changelog-container">
@@ -949,10 +949,10 @@
 
         // Changelog Configuration - Add your updates here
         const changelogData = [
-            }, 
             {
                 date: "November 29, 2025",
                 message: "📝 Command Name Changes: Mostly updated ticket commands, And other commands had a little bit of changes."
+            },
             {
                 date: "November 27, 2025",
                 message: "🐛 Fixed Bugs: Fixed syntax error in the anti-link system within the on_message event handler. Added missing parentheses around the URL detection condition that was causing a runtime error."
@@ -967,7 +967,7 @@
             },
             {
                 date: "November 27, 2025",
-                message: "⚙️ View Initialalization: Enhanced view initialization with proper timeout settings for long-lived components"
+                message: "⚙️ View Initialization: Enhanced view initialization with proper timeout settings for long-lived components"
             },
             {
                 date: "November 27, 2025",
@@ -984,10 +984,6 @@
             {
                 date: "November 27, 2025",
                 message: "🛠️ Bug Fixes: Resolved issue with ticket system permissions and slash command registration"
-            },
-            {
-                date: "November 27, 2025",
-                message: "📊  Stats: Added detailed command usage tracking and performance monitoring"
             },
             {
                 date: "November 23, 2025",
