--- a/index.html
+++ b/index.html
@@ -827,8 +827,8 @@
                     <div class="command-category" style="animation-delay: 0.2s">
                         <h3 class="category-title"><i class="fas fa-ticket-alt"></i> Tickets</h3>
                         <ul class="command-list">
-                            <li class="command-item">/tickets - Create ticket panel</li>
-                            <li class="command-item">/close - Close active ticket</li>
+                            <li class="command-item">/ticket panel - Create ticket panel</li>
+                            <li class="command-item">/ticket close - Close active ticket</li>
                             <li class="command-item">/ticket add - Add user to ticket</li>
                             <li class="command-item">/ticket remove - Remove user</li>
                             <li class="command-item">/delete - Deletes any channel or a ticket channel</li>
@@ -837,8 +837,8 @@
                     <div class="command-category" style="animation-delay: 0.3s">
                         <h3 class="category-title"><i class="fas fa-cogs"></i> Utility</h3>
                         <ul class="command-list">
-                            <li class="command-item">/userinfo - Get user details</li>
-                            <li class="command-item">/serverinfo - Server statistics</li>
+                            <li class="command-item">/user info - Get user details</li>
+                            <li class="command-item">/server info - Server statistics</li>
                             <li class="command-item">/avatar - Get user avatar</li>
                             <li class="command-item">/ping - Check bot latency</li>
                             <li class="command-item">/help - Command list & help</li>
