--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                         <div class="card-value" id="uptime">100%</div>
                         <div class="status-indicator">
                             <div class="status-dot online"></div>
-                            <span id="uptime-text">Since Last Restart - November 29, 2025</span>
+                            <span id="uptime-text">December 3, 2025</span>
                         </div>
                     </div>
                 </div>
@@ -943,12 +943,16 @@
             status: "online", // Options: "online", "offline", "maintenance"
             statusText: "All Systems Operational - Pushed All Updates.",
             uptime: "100%",
-            uptimeText: "Since Last Restart - November 29, 2025",
-            lastUpdated: "November 29, 2025"
+            uptimeText: "December 3, 2025",
+            lastUpdated: "December 3, 2025"
         };
 
         // Changelog Configuration - Add your updates here
         const changelogData = [
+              {
+                date: "December 3, 2025",
+                message: "🔨 Added Two New Slash Commands: Those Two Commands Being /prefix & /embed. There Will Be Bigger Updates Soon."
+            },
             {
                 date: "November 29, 2025",
                 message: "📝 Command Name Changes: Mostly updated ticket commands, And other commands had a little bit of changes."
