--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                         <div class="card-value" id="uptime">100%</div>
                         <div class="status-indicator">
                             <div class="status-dot online"></div>
-                            <span id="uptime-text">December 3, 2025</span>
+                            <span id="uptime-text">December 5, 2025</span>
                         </div>
                     </div>
                 </div>
@@ -854,7 +854,7 @@
                     <span id="update-status-text">System Updated</span>
                 </div>
                 <p class="update-details" id="update-details">
-                    Last updated: November 29, 2025
+                    Last updated: December 5, 2025
                 </p>
 
                 <div class="changelog" id="changelog-container">
@@ -943,13 +943,17 @@
             status: "online", // Options: "online", "offline", "maintenance"
             statusText: "All Systems Operational - Pushed All Updates.",
             uptime: "100%",
-            uptimeText: "December 3, 2025",
-            lastUpdated: "December 3, 2025"
+            uptimeText: "December 5, 2025",
+            lastUpdated: "December 5, 2025"
         };
 
         // Changelog Configuration - Add your updates here
         const changelogData = [
-              {
+             {
+                date: "December 5, 2025",
+                message: "🔧 Major Fixes: Lots of new fixes, changes, And many more."
+            }, 
+            {
                 date: "December 3, 2025",
                 message: "🔨 Added Two New Slash Commands: Those Two Commands Being /prefix & /embed. There Will Be Bigger Updates Soon."
             },
